Inclusao do comando shell p/ chat c/ agente AI
Criada a classe ChatCommand p/ termos o cmd 'chat' no shell iterativo 'METABOT:> ' que vai abrir apos a aplicacao iniciar. Criada a classe ShellAgent p/ implementar o agente que vai responder aos comandos do shell, temos a config application.properties 'spring.shell.interactive.enabled=true' p/ habilitar o shell iterativo 'METABOT:> ' apos app iniciar. Removendo dir target e incluido no .gitignore e mais alguns. **IMPORTANTE**: Refatoracao e correcao do fluxo do agente BDI (estimular, perceber, analisar e responder), alguns erros na FSM(Finite State Machine), foram resolvidos e foi testado c/ input='chat realizar plano de estudos sobre a invaso ao tibet pela china' e retornou dados coerentes, claro que precisamos melhorar ainda =)